[package]
name = "autovec"
version = "0.1.0"
authors = ["zhongyang.wu <zhongyang.wu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }


[lib]
proc-macro = true

