[package]
name = "kvs"
version = "0.1.0"
authors = ["zhongyang.wu <zhongyang.wu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
serde = "1.0.104"
serde_json = "1.0"

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
log="0.4.8"

[[bench]]
name = "benchmark"
harness = false