[package]
name = "kvs"
version = "0.1.0"
authors = ["zhongyang.wu <zhongyang.wu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.32.0"
failure = "0.1.5"
serde = "1.0.104"
serde_json = "1.0"
log = "0.4.8"
env_logger = "0.7.1"
sled = "0.22.1"
crossbeam = "0.7.1"
rayon = "1.0.3"
num_cpus = "1.10.0"
crossbeam-skiplist = { version = "0.0.0", git = "https://github.com/crossbeam-rs/crossbeam.git", rev = "8cc906b" }

[dev-dependencies]
assert_cmd = "0.11"
criterion = "0.2.11"
predicates = "1.0.0"
rand = "0.6.5"
tempfile = "3.0.7"
walkdir = "2.2.7"
panic-control = "0.1.4"
crossbeam-utils = "0.6.5"

[[bench]]
name = "thread_pool_bench"
harness = false

#[[bench]]
#name = "engine_bench"
#harness = false