[package]
name = "async-local-thread"
version = "0.1.0"
authors = ["zhongyang.wu <zhongyang.wu@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.5", features = ["full", "tracing"] }
futures = "0.3.5"

